--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,18 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #8baaaa;
+  /* background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%); */
+  /* background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%); */
+  /* background-image: linear-gradient(to right, #868f96 0%, #596164 100%); */
+  background-image: linear-gradient(45deg, #8baaaa 0%, #596164 100%);
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  margin: unset;
 }
 
 @layer base {
